fix lingering hover on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,9 @@ html {
   margin-top: 3em;
 }
 
-.caught-total-content, .caught-total-heading, .all-critters-heading-container {
+.caught-total-content,
+.caught-total-heading,
+.all-critters-heading-container {
   animation: bounceIn .1s ease-out;
   animation-fill-mode: forwards;
 }
@@ -40,13 +42,23 @@ html {
 }
 
 @keyframes bounceIn {
-  0% {transform: scaleX(1.1);}
-  100% {transform: scaleX(1);}
+  0% {
+    transform: scaleX(1.1);
+  }
+
+  100% {
+    transform: scaleX(1);
+  }
 }
 
 @keyframes fadeIn {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 .hemisphere-buttons {
@@ -77,10 +89,6 @@ html {
   font-weight: 800;
   font-size: 1.3rem;
   transition: font-size .5s;
-}
-
-.critter-button:hover {
-  background: rgb(255, 183, 0);
 }
 
 .critter-button:hover .critter-button-icon {
@@ -234,13 +242,6 @@ html {
   cursor: pointer;
 }
 
-.entry-border:hover .critter-entry-icon {
-  opacity: 80%;
-  cursor: pointer;
-  transform: scale(1.3);
-  transform-origin: center;
-}
-
 .critter-entry-icon {
   width: 4em;
   transition: transform 80ms ease-in-out;
@@ -274,11 +275,6 @@ html {
   color: white;
   background-color: var(--bg-secondary);
   z-index: 1;
-}
-
-.entry-border:hover .tooltip-text {
-  visibility: visible;
-  cursor: pointer;
 }
 
 .unavailable {
@@ -334,10 +330,6 @@ html {
   cursor: pointer;
   margin-top: 1.5em;
   margin-left: 87%;
-}
-
-.close-modal:hover {
-  opacity: 70%;
 }
 
 .critter-name {
@@ -410,6 +402,26 @@ p {
     font-weight: 700;
     transform: scale(1.1);
     transform-origin: center;
+  }
+
+  .critter-button:hover {
+    background: rgb(255, 183, 0);
+  }
+
+  .entry-border:hover .critter-entry-icon {
+    opacity: 80%;
+    cursor: pointer;
+    transform: scale(1.3);
+    transform-origin: center;
+  }
+
+  .entry-border:hover .tooltip-text {
+    visibility: visible;
+    cursor: pointer;
+  }
+
+  .close-modal:hover {
+    opacity: 70%;
   }
 }
 
